Fix font on small device

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				Welcome to my Website
+				Omeng's Website
 			</span>
 		</div>
 	</div>
@@ -24,7 +24,7 @@
 	<div class="pimg2">
 		<div class="ptext">
 			<span class="border trans">
-				Work and Education
+				Work & Education
 			</span>
 		</div>
 	</div>
@@ -39,7 +39,7 @@
 	<div class="pimg3">
 		<div class="ptext">
 			<span class="border trans">
-				Contact and Basic Info
+				Contact & Info
 			</span>
 		</div>
 	</div>
@@ -56,7 +56,7 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				Omeng's Website
+				See you again!
 			</span>
 		</div>
 	</div>
